--- a/app/src/main/res/layout/fragment_page_test.xml
+++ b/app/src/main/res/layout/fragment_page_test.xml
@@ -37,7 +37,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@android:color/background_light" tools:ignore="MissingConstraints"/>
         <Button
-                android:text="프로필 수정"
+                android:text="Followed"
                 android:layout_width="0dp"
                 android:layout_height="20dp" tools:layout_editor_absoluteY="170dp"
                 android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
