--- a/app/src/main/res/layout/fragment_your_page.xml
+++ b/app/src/main/res/layout/fragment_your_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -37,7 +38,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@android:color/background_light" tools:ignore="MissingConstraints"/>
         <Button
-                android:text="프로필 수정"
+                android:text="Followed"
                 android:layout_width="0dp"
                 android:layout_height="20dp" tools:layout_editor_absoluteY="170dp"
                 android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
