--- a/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
@@ -24,7 +24,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
                     android:textSize="20sp"
-                    android:textColor="#4d94ff"
+                    android:textColor="@color/colorPrimary"
                     android:layout_centerVertical="true"
                     android:id="@+id/tvNext"
                     />
