--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
-             android:background="#FFFFFF"
-             tools:context=".Fragment.FeedFragment">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="#FFFFFF"
+        tools:context=".Fragment.FeedFragment">
 
     <TextView
+            app:layout_constraintTop_toTopOf="parent"
             android:text="FEED"
+            android:padding="10dp"
+            android:id="@+id/feed_menu"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4" android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/colorPrimary" android:paddingStart="8dp"/>
 
     <android.support.v7.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@id/feed_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/feed_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="32"
-        android:background="@color/colorAccent">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:layout_weight="32">
 
     </android.support.v7.widget.RecyclerView>
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
