--- a/app/src/main/res/layout/item_feed_recyclerview.xml
+++ b/app/src/main/res/layout/item_feed_recyclerview.xml
@@ -7,6 +7,8 @@
         android:orientation="vertical">
 
     <TextView
+            android:gravity="center|start"
+            android:text="name"
             android:id="@+id/userTextview"
             android:paddingStart="8dp"
             android:layout_width="match_parent"
@@ -25,23 +27,63 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
+                android:paddingHorizontal="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="3"
-                android:orientation="horizontal">
+                android:layout_weight="3">
 
             <ImageButton
-                    android:layout_gravity="center"
+                    android:id="@+id/story_img"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:paddingStart="8dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:background="@drawable/ic_like"
                     android:adjustViewBounds="true"/>
 
-        </LinearLayout>
+            <TextView
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/reply_count"
+                    app:layout_constraintEnd_toStartOf="@id/reply"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/like_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/like"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/reply"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Like"/>
+
+            <TextView
+                    app:layout_constraintTop_toBottomOf="@id/like"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/reply"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/reply_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/reply"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="reply"/>
+
+        </android.support.constraint.ConstraintLayout>
 
         <LinearLayout
+                android:padding="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2">
@@ -53,18 +95,25 @@
 
         </LinearLayout>
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
                 android:padding="8dp">
 
             <EditText
+                    android:paddingStart="16dp"
+                    android:hint="댓글 달기"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/reply_btn"/>
 
             <TextView
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="16dp"
+                    android:padding="10dp"
                     android:text="게시"
                     android:textColor="@color/colorPrimary"
                     android:layout_width="wrap_content"
@@ -75,7 +124,7 @@
                     android:paddingRight="16dp"/>
 
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 
 
     </LinearLayout>
