--- a/app/src/main/res/layout/activity_reply.xml
+++ b/app/src/main/res/layout/activity_reply.xml
@@ -6,6 +6,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/post_lay"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,10 +42,45 @@
 
     </android.support.constraint.ConstraintLayout>
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/reply_rv"
+            app:layout_constraintTop_toBottomOf="@id/post_lay"
+            app:layout_constraintBottom_toTopOf="@id/reply_edit_lay"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+
+    </android.support.v7.widget.RecyclerView>
+
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/reply_edit_lay"
+            android:background="@drawable/reply_btn"
+            app:layout_constraintTop_toBottomOf="@id/reply_rv"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+        <EditText
+                android:id="@+id/reply_edit"
+                android:background="null"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/reply_post_btn"
+                android:layout_marginStart="8dp"
+                android:hint="댓글 달기"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:id="@+id/reply_post_btn"
+                android:textColor="#C5919D"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:text="게시"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
     </android.support.constraint.ConstraintLayout>
 
