--- a/app/src/main/res/layout/item_follwers.xml
+++ b/app/src/main/res/layout/item_follwers.xml
@@ -28,6 +28,7 @@
                 android:text="이름"/>
     
         <TextView
+                android:id="@+id/follow_whether"
                 android:textColor="#FFFFFF"
                 android:paddingVertical="2dp"
                 android:text="Follow"
