--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -19,41 +19,18 @@
         android:orientation="vertical"
         android:layout_below="@id/postlayout1">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="60">
-
-
-            <ImageView
+        <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/galleryImageView"
-                android:scaleType="centerCrop"/>
+                android:layout_weight="40"
+                android:id="@+id/post_recycler"
+                android:verticalSpacing="1.5dp"
+                android:horizontalSpacing="1.5dp"
+                android:stretchMode="none"
+                android:gravity="center"
+                android:layout_marginTop="1dp">
 
-            <ProgressBar
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/progressBar"
-                android:layout_centerInParent="true"/>
-
-        </RelativeLayout>
-
-        <GridView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="40"
-            android:id="@+id/gridView"
-            android:numColumns="3"
-            android:verticalSpacing="1.5dp"
-            android:horizontalSpacing="1.5dp"
-            android:stretchMode="none"
-            android:gravity="center"
-            android:layout_marginTop="1dp">
-
-
-
-        </GridView>
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
