--- a/app/src/main/res/layout/activity_post_next.xml
+++ b/app/src/main/res/layout/activity_post_next.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".Fragment.PostNextFragment">
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context=".Activity.PostNextActivity">
 
     <ImageView
             android:src="@android:color/black"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:id="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/postlayout2" app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/postlayout2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="centerCrop"/>
 
     <RelativeLayout
             android:layout_width="wrap_content"
@@ -26,29 +28,29 @@
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="565dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0" android:id="@+id/constraintLayout">
+            android:id="@+id/constraintLayout">
         <ScrollView
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/scrollView2">
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="vertical"/>
+                android:id="@+id/scrollView2">
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:id="@+id/postEditText" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:hint="내용을 작성해주세요"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/scrollView2"
+                    android:scrollHorizontally="false"
+                    android:gravity="start"
+            />
         </ScrollView>
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/postEditText" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:hint="내용을 작성해주세요" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="@+id/scrollView2"
-        />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
