--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -39,11 +39,12 @@
         <Button
                 android:text="프로필 수정"
                 android:layout_width="0dp"
-                android:layout_height="20dp" tools:layout_editor_absoluteY="170dp"
+                android:layout_height="20dp"
                 android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                 app:layout_constraintStart_toEndOf="@+id/linearLayout2" android:layout_marginStart="24dp"
                 android:background="@drawable/edit_profile_btn" tools:ignore="MissingConstraints"
-                app:layout_constraintHorizontal_bias="1.0"/>
+                app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         <LinearLayout android:layout_width="0dp" android:layout_height="0dp"
                       android:orientation="vertical"
