--- a/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
@@ -20,7 +20,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="다음"
+                    android:text="사진을 선택해주세요"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
                     android:textSize="20sp"
