--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -8,7 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="18"
-            android:background="#2096BA"
+            android:background="@color/colorAccent"
             android:orientation="vertical">
 
         <View android:layout_width="match_parent"
@@ -129,7 +129,7 @@
                     android:text="수정"
                     android:textColor="#FFFFFF"
                     android:elevation="4dp"
-                    android:id="@+id/signUpBtn"/>
+                    android:id="@+id/profileEditBtn"/>
 
             <View android:layout_width="match_parent"
                   android:layout_height="0dp"
