--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -46,14 +46,17 @@
                 app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <LinearLayout android:layout_width="0dp" android:layout_height="0dp"
+        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                       android:orientation="vertical"
-                      app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintEnd_toEndOf="parent"
-                      android:layout_marginEnd="24dp" app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+                      app:layout_constraintBottom_toTopOf="@+id/button2"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      android:layout_marginEnd="24dp"
+                      app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                       android:layout_marginStart="24dp"
                       android:layout_marginTop="16dp"
                       app:layout_constraintTop_toBottomOf="@+id/textView"
                       android:layout_marginBottom="16dp">
+
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="0dp"
                           android:layout_weight="1">
@@ -129,20 +132,20 @@
             android:background="#FFFFFF"
             app:labelVisibilityMode="unlabeled"
             app:itemIconSize="30dp" tools:layout_editor_absoluteX="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" android:id="@+id/bottomNavigationView"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" android:id="@+id/myPageNavigationView"
             app:layout_constraintBottom_toTopOf="@+id/recyclerView">
 
     </android.support.design.widget.BottomNavigationView>
 
-    <android.support.v7.widget.RecyclerView
+    <FrameLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintVertical_weight="0.6"
-            app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/recyclerView">
+            android:id="@+id/myPageFrame" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/myPageNavigationView"/>
 
-    </android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
